# -bas-remote-python-v2

./: .env.example  .gitignore  LICENSE  Makefile  README.md  build.py  pyproject.toml  setup.py
.circleci/: README.md  config.yml
bas_remote/: __init__.py  client.py  errors.py  options.py  task.py
bas_remote/runners/: __init__.py  function.py  runner.py  thread.py
bas_remote/services/: __init__.py  engine_service.py  socket_service.py
bas_remote/types/: __init__.py  message.py  response.py  script.py
docs/: TestRemoteControl.xml  TestRemoteControlV2.xml
examples/: client_thread.py  google_search.py  settings.py
tests/: __init__.py
tests/integration/: base.py  functions_client_test.py  functions_thread_test.py
tests/other/: conftest.py  test_func.py
tests/types/: message_test.py  response_test.py
